# LibjpegTurbo

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/wsy/libjpegturbo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: flash_500x312.NV21
app/src/main/cpp/: CMakeLists.txt  JpegCommon.h  JpegCompressor.cpp  JpegCompressor.h  JpegDecompressor.cpp  JpegDecompressor.h  jni_common.h  native_jpeg_compressor.cpp  native_jpeg_decompressor.cpp
app/src/main/cpp/libjpeg_turbo/: CMakeLists.txt  tjbenchtest.in  tjbenchtest.java.in  tjexampletest.in  tjexampletest.java.in
app/src/main/java/com/wsy/libjpegturbo/: JpegCompressor.java  JpegDecompressor.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/wsy/libjpegturbo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
